crates/secretenv-core/tests/value_access_ui/expose_secret_is_gated.stderr
error[E0599]: no method named `expose_secret` found for struct `Secret<T>` in the current scope
  --> tests/value_access_ui/expose_secret_is_gated.rs:11:25
   |
11 |     let _leak: &str = s.expose_secret();
   |                         ^^^^^^^^^^^^^ method not found in `Secret<String>`
